--- a/app/carts/data/_styles/data.module.css
+++ b/app/carts/data/_styles/data.module.css
@@ -345,7 +345,7 @@
     margin-bottom: auto;
   }
   .css2000 {
-    text-align: center;
+    /* text-align: center; */
     align-self: stretch;
     margin-top: auto;
     margin-bottom: auto;
