--- a/app/articles/[articleid]/article.module.css
+++ b/app/articles/[articleid]/article.module.css
@@ -25,7 +25,7 @@
   top: 60px;
   list-style: none;
   height: 120px;
-  width: 100%;
+  /* width: 100%; */
   padding-top: 40px;
   font-family: 'Poppins', sans-serif;
 }
