修改全局樣式

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,5 +43,27 @@ a {
   
 } */
 
+.leaflet-control-locate a {
+  cursor: pointer;
+}
+
+.leaflet-control-locate-location circle {
+  animation: leaflet-control-locate-throb 4s ease infinite;
+}
+
+@keyframes leaflet-control-locate-throb {
+  0% {
+    stroke-width: 1;
+  }
+  50% {
+    stroke-width: 3;
+    transform: scale(0.8, 0.8);
+  }
+  100% {
+    stroke-width: 1;
+  }
+}
+
+
 
 
