--- a/app/_components/_styles/ImageLinkGallery.css
+++ b/app/_components/_styles/ImageLinkGallery.css
@@ -19,7 +19,7 @@
 }
 
 .gallery-gradient-right {
-  right:0;
+  right: 0;
 }
 
 .gallery-content {
@@ -51,7 +51,7 @@
   padding: 8%;
   transform-style: preserve-3d;
   transition: transform 0.3s ease;
-  transform: translate3d(0,0,0);
+  transform: translate3d(0, 0, 0);
   background-color: #fff;
   border: none;
 }
@@ -68,7 +68,7 @@
   -webkit-backface-visibility: hidden;
   letter-spacing: 0.02em;
   -webkit-font-smoothing: subpixel-antialiased;
-  transform: translate3d(0,0,0);
+  transform: translate3d(0, 0, 0);
 }
 
 .gallery-item:hover .gallery-img {
@@ -87,8 +87,10 @@
   transform-style: preserve-3d;
 }
 
-
 .title {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1440px;
   color: #333;
   font-size: 72px;
   font-weight: 700;
@@ -100,13 +102,13 @@
 }
 
 .title::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 40px;
   left: 20px;
   width: 80px;
   height: 4px;
-  background: linear-gradient(45deg, #931b00, #E76317);
+  background: linear-gradient(45deg, #931b00, #e76317);
   border-radius: 2px;
 }
 
@@ -115,8 +117,8 @@
   margin-top: 10px;
   font-family: inherit;
   font-weight: 600;
-  transform: translate3d(0,0,0);
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  transform: translate3d(0, 0, 0);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
   letter-spacing: 0.02em;
   -webkit-font-smoothing: subpixel-antialiased;
   backface-visibility: hidden;
@@ -127,12 +129,12 @@
   .gallery-container {
     height: 350px;
   }
-  
+
   .gallery-img {
     height: 150px;
     width: 190px;
   }
-  
+
   .title {
     font-size: 60px;
     height: 120px;
@@ -143,27 +145,27 @@
   .gallery-container {
     height: 400px;
   }
-  
+
   .gallery-item {
     padding: 10%;
   }
-  
+
   .gallery-img {
     height: 150px;
     width: 200px;
   }
-  
+
   .title {
     font-size: 48px;
     height: 100px;
     display: flex;
     justify-content: center;
   }
-  
+
   .title::after {
     left: 50%;
+    bottom: 25px;
     transform: translateX(-50%);
-   
   }
 }
 
@@ -178,18 +180,16 @@
 
   .gallery-item {
     padding: 0px;
-    
   }
-  
+
   .title {
     font-size: 40px;
     height: 80px;
-    
   }
   .title::after {
     bottom: 15px;
   }
-  
+
   .gallery-title {
     font-size: 0.9rem;
   }
